--- a/UWUVCI_BaseConfigCreator/UWUVCI_BaseConfigCreator.csproj
+++ b/UWUVCI_BaseConfigCreator/UWUVCI_BaseConfigCreator.csproj
@@ -73,10 +73,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Classes\BaseExport.cs" />
-    <Compile Include="Classes\ENUM\GameConsole.cs" />
-    <Compile Include="Classes\ENUM\Region.cs" />
     <Compile Include="Classes\Exceptions\GameBaseException.cs" />
-    <Compile Include="Classes\GameBases.cs" />
     <Compile Include="Classes\VCIFile.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\MainViewModel.cs" />
@@ -112,7 +109,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Classes\ENUM\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.0\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
