--- a/UWUVCI_BaseConfigCreator/UWUVCI_BaseConfigCreator.csproj
+++ b/UWUVCI_BaseConfigCreator/UWUVCI_BaseConfigCreator.csproj
@@ -31,6 +31,9 @@
     <Page Remove="Classes\ENUM\**" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="GameBaseClassLibrary">
+      <HintPath>D:\Download\GameBaseClassLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="GameBaseClassLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\GameBaseClassLibrary.dll</HintPath>
